# embassy_template

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
