[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"
license = "MIT"

[dependencies]
# Change stm32f103c8 to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = ["nightly", "defmt", "stm32f103rb", "unstable-pac", "memory-x", "time-driver-any", "unstable-traits", "exti" ]  }
embassy-sync = { version = "0.2.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.0", path = "embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000"] }
embassy-usb = { version = "0.1.0", path = "embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[[bin]]
name = "user_led"
test = false
bench = false